--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ async-generator==1.10
 attrs==22.1.0
 certifi==2022.6.15
 cffi==1.15.1
+chromedriver-autoinstaller==0.3.1
 cryptography==37.0.4
 h11==0.13.0
 idna==3.3
